[package]
name = "ai-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.36.0", features=["full"] }
serenity = "0.12.1"
dotenv = "0.15.0"
llm-chain = "0.13.0"
llm-chain-llama = "0.13.0"
reqwest = "0.11.25"
serde = "1.0.197"
futures = "0.3.30"